Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Invoice__c/fields/amount_paid__c.field-meta.xml
<CustomField>
    <fullName>amount_paid__c</fullName>
    <label>amount_paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>