Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Invoice__c/fields/collection_method__c.field-meta.xml
<CustomField>
    <fullName>collection_method__c</fullName>
    <label>collection_method</label>
    <type>TextArea</type>
</CustomField>