Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Invoice__c/fields/invoice_number__c.field-meta.xml
<CustomField>
    <fullName>invoice_number__c</fullName>
    <label>invoice number</label>
    <type>TextArea</type>
</CustomField>