Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Invoice__c/fields/invoice_pdf_url__c.field-meta.xml
<CustomField>
    <fullName>invoice_pdf_url__c</fullName>
    <label>invoice_pdf_url</label>
    <type>Url</type>
</CustomField>