Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Invoice__c/fields/payment_hosted_invoice_url__c.field-meta.xml
<CustomField>
    <fullName>payment_hosted_invoice_url__c</fullName>
    <label>payment_ hosted_invoice_url</label>
    <type>Url</type>
</CustomField>