Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Invoice__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>TextArea</type>
</CustomField>