Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Invoice__c/fields/Stripe_currency__c.field-meta.xml
<CustomField>
    <fullName>Stripe_currency__c</fullName>
    <label>Stripe currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>