Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Invoice__c/fields/Stripe_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_ID__c</fullName>
    <label>Stripe Customer ID</label>
    <type>TextArea</type>
</CustomField>