Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Invoice__c/fields/StripeID__c.field-meta.xml
<CustomField>
    <fullName>StripeID__c</fullName>
    <label>StripeID</label>
    <type>TextArea</type>
</CustomField>