Stripe-Custom-QtC-Demo/force-app/main/default/objects/Stripe_Invoice__c/fields/total__c.field-meta.xml
<CustomField>
    <fullName>total__c</fullName>
    <label>total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>